# ExchangeFinder

./: README.md  exchangefinder.py  pyproject.toml
core/: exchange_versions.py  functions.py  helpers.py  subdomains.txt
