[tool.poetry]
name = "ExchangeFinder"
version = "0.1.0"
description = ""
authors = ["mhaskar"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
dnspython = "^2.2.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
